ja/10.2/admin/synonym-guide.rst
============
同義語一覧
============

概要
====

意味が同じ単語(GB、gigabyteなど)の同義語を管理することができます。

管理方法
========

表示方法
--------

下図の同義語の設定一覧ページを開くには、左メニューの [システム > 辞書] を選択した後、synonymをクリックします。

|image0|

編集するには設定名をクリックします。

設定方法
--------

同義語の設定ページを開くには新規作成ボタンをクリックします。

|image1|

設定項目
--------

変換元
::::::

同義語として扱う対象となる単語を入力します。

変換後
::::::

変換元で入力した単語を変換後の単語で展開します。
たとえば、「TV」を「TV」と「テレビ」として扱いたい場合は、変換元に「TV」を入力して、変換後に「TV」と「テレビ」を入力します。

ダウンロード
============

Apache Luceneが提供する同義語の辞書形式でダウンロードすることができます。

アップロード
============

Apache Luceneが提供する同義語の辞書形式でアップロードすることができます。
同義語はある単語群を別の単語群への置換になるため、辞書の記述ではカンマ(,)と変換(=>)を利用します。
たとえば、「らーめん」を「ラーメン」に置き換える場合は=>を利用して、以下のように記述します。

::

    らーめん=>ラーメン

「fess」と「フェス」を同様のものとして扱う場合は以下のように記述します。

::

    fess,フェス=>fess,フェス

上記のような場合は、=>を省略して以下のようにも記述することができます。

::

    fess,フェス


.. |image0| image:: ../../../resources/images/ja/10.2/admin/synonym-1.png
.. |image1| image:: ../../../resources/images/ja/10.2/admin/synonym-2.png
