ja/15.7/admin/synonym-guide.rst
========
同義語辞書
========

概要
====

同義語とは、表記は異なるが意味が同じ(または近い)単語のことです。
たとえば「GB」と「ギガバイト」、「PC」と「パソコン」、「テレビ」と「TV」などが同義語(類義語)にあたります。
Fess の同義語辞書に登録しておくと、いずれか一方の単語で検索したときに、
同義語として登録した他の単語を含むドキュメントも検索結果に含められます。
これにより、表記ゆれによる検索漏れを防ぎ、検索のヒット率を高めることができます。

意味が同じ単語(GB、gigabyteなど)の同義語を管理することができます。

管理方法
======

表示方法
------

下図の同義語の設定一覧ページを開くには、左メニューの [システム > 辞書] を選択した後、synonymをクリックします。

|image0|

編集するには設定名をクリックします。

設定方法
------

同義語の設定ページを開くには新規作成ボタンをクリックします。

|image1|

設定項目
------

インデックス作成に関して標準の設定ではbi-gramであるため、変換後の単語が1文字にならないように登録する必要があります。
また同義語の登録時は以下のように登録する必要があります。

* ひらがなはカタカナで登録
* 小文字カタカナは大文字カタカナで登録
* 全角英数字は半角英数字で登録
* 同義語は重複登録しない

変換元
:::::

同義語として扱う対象となる単語を入力します。

変換後
:::::

変換元で入力した単語を変換後の単語で展開します。
たとえば、「TV」を「TV」と「テレビ」として扱いたい場合は、変換元に「TV」を入力して、変換後に「TV」と「テレビ」を入力します。

ダウンロード
=========

Apache Luceneが提供する同義語の辞書形式でダウンロードすることができます。

アップロード
=========

Apache Luceneが提供する同義語の辞書形式でアップロードすることができます。
同義語はある単語群を別の単語群への置換になるため、辞書の記述ではカンマ(,)と変換(=>)を利用します。
たとえば、「TV」を「テレビ」に置き換える場合は=>を利用して、以下のように記述します。

::

    TV=>テレビ

「fess」と「フェス」を同様のものとして扱う場合は以下のように記述します。

::

    fess,フエス=>fess,フエス

上記のような場合は、=>を省略して以下のようにも記述することができます。

::

    fess,フエス

関連項目
========

- :doc:`../user/search-or`
- :doc:`../user/search-field`
- :doc:`dict-guide`


.. |image0| image:: ../../../resources/images/ja/15.7/admin/synonym-1.png
.. |image1| image:: ../../../resources/images/ja/15.7/admin/synonym-2.png
